@@ -2,7 +2,7 @@
  &INPUT
    prefix = 'gold'
    postfix = '_WanT'
-   work_dir = './'
+   work_dir = './SCRATCH'
    datatype = 'modulus'
    output_fmt = 'plt'
    wann = '1-2,6'
