@@ -2,7 +2,7 @@
 &CONTROL
    prefix = 'gold'
    postfix = '_WanT'
-   work_dir = './'
+   work_dir = './SCRATCH/'
    restart_mode = 'from_scratch'
    verbosity = 'high'
 /
